v5.3.0.0
- Fixed warn help menu.
- Fixed a massive memory leak with level unloading.
- Fixed leaving a channel name black in the IRC settings causing a crash.
- Fixed /spheroid being lopsided with even numbers.
- Fixed the update checker so it only updates if there actually is an update.
- Fixed /xban not working at all if the player is offline.
- Fixed a bug in /ban that allowed a player to ban someone ranked higher than them if the player being banned was below rank permission 80. 
- Added option for WoM Direct heartbeat.
- Added the "Notchian" tree generator, use /tree notch.
- Added command blocks, prepend a / to your /mb message to make it a command block. Example: /mb /cuboid air random
- Added a Lava Survival map browser, so you can download maps from within the software.
- Added some default position settings for Lava Survival.
- Added a shortcut /fz for /freeze.
- Added new, better CTF and removed the old one. It's pretty much ready to go right out-of-the-box, just type /ctf.
- Added a lives system to Lava Survival, so players actually have to worry about killer lava/water. You can set the number of lives in the properties.
- Added Global Chat to the chat tab in the GUI.
- Added commands:
	- /nyan - 100% self-explanatory!
	- /warp - For the new warp system!
- Removed commands:
	- /drop - Old CTF command, not needed.
	- /team - Old CTF command, not needed.
- Removed that stupid button next to the command input box.
- Made improvements to leaf decay, should be more random now.
- Made it so command and block change errors show the error info in-game.
- Made it so that /inv will send a message to the user if the target (or themselves) has had invincible mode enabled/disabled.
- Made it so you can use /inv on another person from console. 
- Disabled color codes in Global Chat, it's just too risky with the exploits.
- Added Suppot for SQLite3 (part done)
- Added new help category, 'game'
- New doors